# sens-prism

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test-sdk.yml
docs/: getting-started.md
docs/api/: authentication.md  errors.md  reference.md
docs/concepts/: data-sovereignty.md  overview.md  semantic-layers.md
docs/guides/: academic-review.md  financial-analysis.md  legal-research.md
examples/python/: quickstart.py
examples/typescript/: quickstart.ts
sdk/python/: README.md  pyproject.toml
sdk/python/sens/: __init__.py  client.py  exceptions.py
sdk/typescript/: package.json
sdk/typescript/src/: client.ts  exceptions.ts  index.ts  types.ts
